minor fixes on overflow

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,24 +4,12 @@
   font-display: swap;
 }
 
-
-html {
-  --name: theme2;
-  --main_bg_color: url(../img/background.jpg);
-  --main_text_color: #000000;
-  --gradient: linear-gradient(120deg, #bd34fe, #e0321b 30%, #41d1ff 60%);
-  --purple_text_color: #747bff;
-  --text_bg_color: rgb(121 163 231);
-  --item_bg_color: rgba(249, 250, 251, 0.42);
-  --item_hover_color: rgba(244, 245, 246, 0.8);
-  --item_left_title_color: #000000;
-  --item_left_text_color: #494949;
-  --footer_text_color: #ffffff;
-  --left_tag_item: #c7e1fa;
-  --card_filter: 0px;
-  --back_filter: 20px;
-  --back_filter_color: #00000030;
-  --fill: #000000;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  user-select: none;
+  transition: background-color 0.2s ease;
 }
 
 a:hover,
@@ -50,15 +38,42 @@ a:focus {
   background-color: var(--main_bg_color, linear-gradient(50deg, #a2d0ff, #ffffff));
 }
 
+
+html {
+  --name: theme2;
+  --main_bg_color: url(../img/background.jpg);
+  --main_text_color: #000000;
+  --gradient: linear-gradient(120deg, #bd34fe, #e0321b 30%, #41d1ff 60%);
+  --purple_text_color: #747bff;
+  --text_bg_color: rgb(121 163 231);
+  --item_bg_color: rgba(249, 250, 251, 0.42);
+  --item_hover_color: rgba(244, 245, 246, 0.8);
+  --item_left_title_color: #000000;
+  --item_left_text_color: #494949;
+  --footer_text_color: #ffffff;
+  --left_tag_item: #c7e1fa;
+  --card_filter: 0px;
+  --back_filter: 20px;
+  --back_filter_color: #00000030;
+  --fill: #000000;
+}
+
 /*Base Styles*/
 body {
-  margin: 0;
-  padding: 0;
-  background: var(--main_bg_color) center/cover no-repeat fixed;
+  height: 100%;
+  min-height: 100vh;
+  width: 100%;
+  position: relative;
+  font-family: "b", "a", sans-serif;
+  background: var(--main_bg_color);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  transition: color 0.1s ease;
   color: var(--main_text_color);
-  font-family: sans-serif;
-  overflow-x: hidden;
 }
+
 
 /*Blur overlay*/
 .filter {
@@ -246,21 +261,6 @@ body {
   display: none;
 }
 
-.iconTip {
-  white-space: nowrap;
-  display: none;
-}
-
-.iconItem:hover {
-  width: 95px;
-  transform: translateY(-2px);
-  background: var(--item_hover_color);
-}
-
-.iconItem:hover .iconTip {
-  display: block;
-}
-
 .iconItem {
   width: 49px;
   height: 43px;
@@ -285,6 +285,21 @@ body {
   fill: var(--fill);
   font-size: 22px;
   margin-right: 3px;
+}
+
+.iconTip {
+  white-space: nowrap;
+  display: none;
+}
+
+.iconItem:hover {
+  width: 95px;
+  transform: translateY(-2px);
+  background: var(--item_hover_color);
+}
+
+.iconItem:hover .iconTip {
+  display: block;
 }
 
 .snake-icon {
@@ -327,21 +342,33 @@ body {
 .projectItem {
   display: flex;
   flex-direction: column;
-  /* important! */
   width: 300px;
   padding: 10px;
   background: var(--item_bg_color);
   backdrop-filter: blur(var(--card_filter));
   border-radius: 8px;
   margin: 10px;
-  transition: transform 0.3s;
-  text-decoration: none;
-  color: inherit;
+  transition: opacity 0.5s ease, background-color 0.2s ease, border 0.2s ease, transform 0.3s ease;
 }
 
 .projectItem:hover {
   box-shadow: 0 8px 16px -4px #2c2d300c;
   transform: translateY(-2px);
+}
+
+.projectItemLeft p {
+  font-size: 15px;
+  margin-top: 5px;
+  color: var(--item_left_text_color);
+}
+
+.projectItemLeft h1 {
+  font-weight: normal;
+  font-size: 20px;
+  margin: 0px;
+
+  transition: font-size 0.4s ease;
+  color: var(--item_left_title_color);
 }
 
 .projectItemLeft {
@@ -350,24 +377,14 @@ body {
   width: 80%;
 }
 
-.projectItemLeft h1 {
-  font-size: 20px;
-  margin: 0;
-}
-
-.projectItemLeft p {
-  font-size: 15px;
-  margin: 5px 0 0;
-  color: var(--item_left_text_color, #2c2c2c);
-}
-
 .projectItemRight {
-  width: 80px;
-  height: 80px;
+  overflow: hidden;
+  transition: width 0.4s ease;
   display: flex;
-  align-items: center;
   justify-content: center;
-  margin-right: 0;
+  align-items: center;
+  width: 20%;
+  height: 100%;
 }
 
 .projectItemRight img {
@@ -503,7 +520,6 @@ body {
   }
 
   .iconContainer {
-
     margin-top: 4vw;
 
   }
@@ -531,6 +547,9 @@ body {
     display: none;
   }
 
+}
+
+@media (max-width: 800px) {
   .mobile-skills {
     display: block;
     margin: 40px 0 0 0;
@@ -635,4 +654,54 @@ footer {
   color: var(--footer_text_color);
   font-size: 13px;
   bottom: 0;
+}
+
+.tc {
+  position: fixed;
+
+  display: flex;
+  visibility: hidden;
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  background: rgba(20, 20, 20, 0.5);
+  z-index: 99999;
+  align-items: center;
+  top: 0;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.tc-main {
+  z-index: 100000;
+
+  width: 80%;
+  max-width: 300px;
+  min-height: 200px;
+  background-color: #ffffff;
+  border-radius: 15px;
+
+  display: flex;
+  transition: transform 0.2s linear;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transform: translateY(30%) scale(0.5);
+
+}
+
+.tc-img {
+  width: 100%;
+  height: 100%;
+}
+
+.tc.active {
+  visibility: visible;
+}
+
+.tc-main.active {
+
+  transform: translateY(0) scale(1);
+
 }
